[gd_scene format=3 uid="uid://chufft44nwvjs"]

[ext_resource type="Script" uid="uid://3kta4qoe728n" path="res://scripts/ability_template.gd" id="2_esyi5"]

[node name="AbilityTemplate" type="PanelContainer" unique_id=152856914]
offset_right = 238.0
offset_bottom = 243.0
script = ExtResource("2_esyi5")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2066118148]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=860708051]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1107342082]
layout_mode = 2

[node name="name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=729541529]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Trash" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1517480654]
layout_mode = 2
text = "Trash"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer" unique_id=1230430556]
custom_minimum_size = Vector2(0, 153.94)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Description"
wrap_mode = 1
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=2124030351]
layout_mode = 2
alignment = 1

[node name="AbilityUseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=1000433602]
layout_mode = 2
text = "Use"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=645003590]
layout_mode = 2
size_flags_vertical = 1
text = "Mana Cost:"
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=100951177]
layout_mode = 2
allow_greater = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Trash" to="." method="_on_trash_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/AbilityUseButton" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
